<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LaMosy</string>
    <string name="pref_file">ani.am.preference_file</string>
    <string name="pref_login_status">ani.am.preference_login_status</string>
    <string name="pref_user_name">ani.am.preference_user_name</string>
    <string name="pref_user_email">ani.am.preference_user_email</string>

    <string name="user_name">User Name</string>
    <string name="user_pass">Password</string>
    <string name="user_retype_pass">Retype Password</string>
    <string name="user_email">Email</string>
    <string name="login">Login</string>
    <string name="new_user">New User? Register Now</string>
    <string name="already_have_acount">Already have an account? Login</string>

    <string name="name">Name</string>
    <string name="register">Register</string>

    <string name="something_went_wrong">Something went wrong...</string>
    <string name="complete_all_fields">Complete all fields...</string>
    <string name="change_fields">Change fields...</string>
    <string name="invalid_email_address">Invalid email address...</string>

    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_shopping_history">My shopping history</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="successfully_ordered">Thank you, Order Place</string>
    <string name="payment_cancel">Payment cancel</string>
    <string name="invalid_payment">Invalid payment</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="addCategory">Add Category</string>
    <string name="logout">Log Out</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="category_name">Category Name</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>

    <string name="check_internet">Please check your Internet Connection</string>
    <string name="logout_failed">LogOut Failed..Please try again...</string>
    <string name="loading">Loading...</string>


    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure you want to delete?</string>
    <string name="edit">Edit</string>

    <string name="products">Products</string>
    <string name="empty_string">No Items Available</string>
    <string name="addProduct">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="total">Total Price</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="count">Count</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="app_version">App version : %1$s</string>

    <string name="english">English</string>
    <string name="armenian">Armenian</string>
    <string name="label_buy_now">Order Now</string>
    <string name="card_data">Card Data</string>

    <string name="audio_recording_error">Audio recording error</string>
    <string name="client_side_error">Client side error</string>
    <string name="insufficient_permissions">Insufficient permissions</string>
    <string name="network_error">Network error</string>
    <string name="network_timeout">Network timeout</string>
    <string name="no_match">No match</string>
    <string name="recognition_service_busy">RecognitionService busy</string>
    <string name="error_from_server">Error from server</string>
    <string name="no_speech_input">No speech input</string>
    <string name="didnt_understand">Didn\'t understand, please try again.</string>

    <string name="buyer_info">Buyer info</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
