<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior = "single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home">
        </item>
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_person">
        </item>
        <item
            android:id="@+id/addCategory"
            android:title="@string/addCategory"
            android:icon="@drawable/ic_add_category">
        </item>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings">
        </item>
    </group>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout">
    </item>
</menu>