<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="@dimen/marginLeftSize"
    android:visibility="visible">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:background="@drawable/background_edit_text"
        android:padding="@dimen/marginLeftSize"
        android:layout_margin="@dimen/marginTopSize"/>

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:background="@drawable/background_edit_text"
        android:padding="@dimen/marginLeftSize"
        android:layout_margin="@dimen/marginTopSize"/>

    <EditText
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/region"
        android:background="@drawable/background_edit_text"
        android:padding="@dimen/marginLeftSize"
        android:layout_margin="@dimen/marginTopSize" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:background="@drawable/background_edit_text"
        android:padding="@dimen/marginLeftSize"
        android:layout_margin="@dimen/marginTopSize"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"
        android:background="@drawable/background_edit_text"
        android:padding="@dimen/marginLeftSize"
        android:layout_margin="@dimen/marginTopSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/marginLeftSize"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/bigTextSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/marginLeftSize"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/bigTextSize"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>