<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/marginTopSize"
        android:orientation="vertical"
        tools:context=".fragments.AddProductFragment">

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/marginLayoutSize"
            android:layout_marginBottom="@dimen/marginLayoutSize"
            android:src="@drawable/default_image" />

        <EditText
            android:id="@+id/product_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomSize"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/textColor"
            android:hint="@string/product_name"
            android:padding="@dimen/paddingSize"
            android:textSize="@dimen/standardTextSize" />

        <EditText
            android:id="@+id/product_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomSize"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/textColor"
            android:hint="@string/price"
            android:inputType="number"
            android:padding="@dimen/paddingSize"
            android:textSize="@dimen/standardTextSize" />

        <EditText
            android:id="@+id/product_size_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomSize"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/textColor"
            android:hint="@string/size"
            android:inputType="number"
            android:padding="@dimen/paddingSize"
            android:textSize="@dimen/standardTextSize" />
        <EditText
            android:id="@+id/product_count_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomSize"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/textColor"
            android:hint="@string/count"
            android:inputType="number"
            android:padding="@dimen/paddingSize"
            android:textSize="@dimen/standardTextSize" />


        <EditText
            android:id="@+id/product_description_et"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/textColor"
            android:hint="@string/description"
            android:padding="@dimen/paddingSize"
            android:textAlignment="center"
            android:textSize="@dimen/standardTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/marginLayoutSize"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:textColor="@color/textColor"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:text="@string/add"
                android:textColor="@color/textColor"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>