<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/border_background"
    android:padding="@dimen/marginLayoutSize"
    android:layout_marginLeft="@dimen/marginLeftSize"
    android:layout_marginRight="@dimen/marginRightSize"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginLayoutSize"
        android:text="@string/delete_msg"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/standardTextSize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/marginLeftSize"
            android:layout_marginRight="@dimen/marginRightSize"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/marginLeftSize"
            android:layout_marginRight="@dimen/marginRightSize"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>
