<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".fragments.AddCategoryFragment">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/marginLayoutSize"
        android:src="@drawable/default_image" />

    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginLayoutSize"
        android:layout_marginBottom="100dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/category_name"
        android:padding="@dimen/paddingSize"
        android:textColor="@color/textColor"
        android:textSize="@dimen/mediumTextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/cancel"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/add"
            android:textColor="@color/textColor" />
    </LinearLayout>
</LinearLayout>