<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activites.MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="pin"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="@dimen/marginLayoutSize"/>
            <EditText
                android:id="@+id/user_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginLayoutSize"
                android:drawableEnd="@drawable/ic_person"
                android:background="@drawable/background_edit_text"
                android:hint="@string/user_name"
                android:padding="@dimen/paddingSize"
                android:textColorHint="@color/md_light_blue_50"
                android:textColor="@color/md_light_blue_50"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginLayoutSize"
                android:background="@drawable/background_edit_text"
                android:hint="@string/user_pass"
                android:drawableEnd="@drawable/ic_lock"
                android:inputType="textPassword"
                android:padding="@dimen/paddingSize"
                android:textSize="@dimen/mediumTextSize"
                android:textColorHint="@color/md_light_blue_50"
                android:textColor="@color/md_light_blue_50"
                />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginLayoutSize"
                android:layout_marginBottom="@dimen/marginLayoutSize"
                android:background="@drawable/background_button"
                android:text="@string/login"
                android:textColor="@color/md_light_blue_50"
                android:textAllCaps="false"
                android:textSize="@dimen/standardTextSize" />

            <TextView
                android:id="@+id/register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginLayoutSize"
                android:text="@string/new_user"
                android:textStyle="italic|bold"
                android:textColor="@color/md_light_blue_900"
                android:textSize="@dimen/standardTextSize" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>