<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/marginLeftSize"
    android:layout_marginTop="@dimen/marginTopSize"
    android:layout_marginRight="@dimen/marginRightSize"
    android:layout_marginBottom="@dimen/marginBottomSize"
    android:elevation="2dp"
    android:padding="@dimen/paddingSize"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_margin="2dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            android:src="@color/md_cyan_50" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/product_image"
            android:layout_toStartOf="@+id/delete"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/marginLeftSize"
            android:paddingRight="@dimen/marginLeftSize"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="@dimen/bigTextSize"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/product_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_toEndOf="@+id/product_image"
            android:layout_below="@+id/product_name"
            android:layout_above="@+id/product_price"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/marginLeftSize"
            android:paddingRight="@dimen/marginLeftSize"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="@dimen/mediumTextSize"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/product_image"
            android:layout_above="@+id/stars_layout"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/ic_shop"
            android:paddingLeft="@dimen/marginLeftSize"
            android:paddingRight="@dimen/marginLeftSize"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="@dimen/bigTextSize"
            android:textStyle="bold" />
        <RatingBar
            android:id="@+id/radioBar"
            android:layout_below="@+id/product_image"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:numStars="1"
            android:rating="2.5"
            android:stepSize="0.5"
            android:visibility="gone"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:id="@+id/stars_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image"
            android:padding="@dimen/paddingSize">
            <ImageView
                android:id="@+id/star_1"
                android:layout_width="@dimen/starIconSize"
                android:layout_height="@dimen/starIconSize"
                android:layout_marginRight="@dimen/starIconsMarginSize"
                android:src="@drawable/star_icon"
                android:tint="@color/md_yellow_50" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="@dimen/starIconSize"
                android:layout_height="@dimen/starIconSize"
                android:src="@drawable/star_icon"
                android:layout_marginRight="@dimen/starIconsMarginSize"
                android:tint="@color/md_yellow_50" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="@dimen/starIconSize"
                android:layout_height="@dimen/starIconSize"
                android:src="@drawable/star_icon"
                android:layout_marginRight="@dimen/starIconsMarginSize"
                android:tint="@color/md_yellow_50" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="@dimen/starIconSize"
                android:layout_height="@dimen/starIconSize"
                android:src="@drawable/star_icon"
                android:layout_marginRight="@dimen/starIconsMarginSize"
                android:tint="@color/md_yellow_50" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="@dimen/starIconSize"
                android:layout_height="@dimen/starIconSize"
                android:src="@drawable/star_icon"
                android:tint="@color/md_yellow_50" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>